[package]
name = "shimmy"
version = "0.1.0"
authors = ["Watiipasoo <watipaso.chirambo@nicotechnologies.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
webbrowser = "0.8.12"

[build-dependencies]
slint-build = "1.0"
